[build-system]
requires = ["setuptools>64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radio_tools"
version = "0.1.0"
dependencies = ["astropy","numpy","argparse","dynesty","multiprocessing"]
authors = [
  { name="Christian Groeneveld", email="groeneveld@strw.leidenuniv.nl" },
]
description = "Tools for radio astronomy"
readme = "README.md"

[project.scripts]
getwscleancall = "radio_tools.getwscleancall:main"
std-img = "radio_tools._imaging_tools_cli:std_img"
pix-per-beam = "radio_tools._imaging_tools_cli:calculate_pixels_per_beam"
